--- a/app/src/main/res/layout/dialog_splash.xml
+++ b/app/src/main/res/layout/dialog_splash.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDark">
+    android:background="@color/colorDark"
+    android:padding="@dimen/row_padding">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -41,5 +42,12 @@
         android:src="@mipmap/openaip"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/aeroworks"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
