--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:weightSum="4"
         android:orientation="horizontal"
-        android:elevation="@dimen/elevation_8"
+        android:elevation="@dimen/elevation_16"
         android:id="@+id/home_gps_info_panel"
         android:background="?attr/backgroundDarkColor"
         android:layout_alignParentBottom="true">
@@ -91,8 +91,9 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/backgroundColor"
+        android:background="?attr/backgroundDarkColor"
         android:id="@+id/home_plan_scrollview"
+        android:elevation="@dimen/elevation_8"
         android:layout_above="@id/home_gps_info_panel"
         android:visibility="gone">
 
@@ -152,7 +153,8 @@
             android:padding="@dimen/row_padding"
             android:textColor="?attr/primaryTextColor"
             android:id="@+id/home_button_plan"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:elevation="@dimen/elevation_8"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -162,7 +164,8 @@
             android:id="@+id/home_button_plan_left"
             android:visibility="gone"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/ic_arrow_back_inv"/>
+            android:src="@drawable/ic_arrow_back_inv"
+            android:elevation="@dimen/elevation_8"/>
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -173,7 +176,8 @@
             android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_done_inv"/>
+            android:src="@drawable/ic_done_inv"
+            android:elevation="@dimen/elevation_8"/>
 
         
         <ImageButton
@@ -185,6 +189,7 @@
             android:layout_marginEnd="@dimen/row_padding"
             android:background="?attr/backgroundDarkColor"
             android:layout_alignParentEnd="true"
+            android:elevation="@dimen/elevation_8"
             android:src="@drawable/ic_my_location"/>
 
         <ImageButton
@@ -192,6 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/row_padding"
+            android:elevation="@dimen/elevation_8"
             android:background="?attr/backgroundDarkColor"
             android:src="@drawable/ic_navigation"
             android:layout_below="@+id/home_map_center"
