--- a/app/src/main/res/layout/list_edit_h_item.xml
+++ b/app/src/main/res/layout/list_edit_h_item.xml
@@ -5,14 +5,17 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/row_padding_small"
     android:layout_margin="0dp"
-    android:layout_centerHorizontal="true">
+    android:layout_centerHorizontal="true"
+    android:gravity="center_horizontal">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/list_edit_text"
         android:textColor="?attr/primaryTextColor"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"/>
 
     <ImageButton
         android:layout_width="wrap_content"
