--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -196,6 +196,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:paddingTop">@dimen/row_divider</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <!-- ======================================================================
@@ -225,9 +226,18 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">?attr/primaryTextColor</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/row_padding</item>
+    </style>
+
+    <style name="Block_checkbox_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">@dimen/row_padding</item>
+
     </style>
 
     <style name="Block_button_style">
