--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -170,16 +170,18 @@
             />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:id="@+id/home_nogps"
             android:text="@string/no_gps"
             android:textSize="@dimen/big_text"
             android:textColor="?attr/redColor"
             android:layout_above="@id/home_nonet"
-            android:layout_margin="@dimen/bar_spacing"
-            android:layout_alignParentTop="true"
-            />
+            android:padding="@dimen/set_spacing"
+            android:layout_alignParentBottom="true"
+            android:background="?attr/highlightColor"
+            android:elevation="@dimen/elevation_8"/>
         
         <ImageButton
             android:id="@+id/home_map_center"
